--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Virtual Keyboard</title>
 </head>
 <body>
-
     <script src="dist/index.bundle.js"></script>
 </body>
 </html>   
