feat: create scss folder and make generateHtml function

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scss/main.css">
     <title>Virtual Keyboard</title>
 </head>
 <body>
-    <script src="dist/index.bundle.js"></script>
+    <script src="dist/index.bundle.js"></script> 
 </body>
-</html>   
+</html>
